# scholar-buddy

./: index.html  package-lock.json  package.json  pyproject.toml  server.js  server.py  tempCodeRunnerFile.py
src/: App.jsx
src/api/: getPaperDetails.js  paperApi.js  papers.js  searchPapers.js
src/components/: AnalysisPanel.jsx  HighlightableText.jsx  HomeButton.jsx  PaperAnalysis.jsx  PaperCard.jsx  PaperList.jsx  QuestionResultsPage.jsx  QuestionSearch.jsx  SearchBar.jsx  SearchPage.jsx
src/pages/: HomePage.jsx  PaperPage.jsx
src/styles/: AnalysisPanel.css  App.css  HomePage.css  PaperPage.css  QuestionResults.css  QuestionSearch.css  Select.css  index.css
src/utils/: highlight.js
